<resources>
    <string name="app_name">Guess what.</string>
    <string name="app_subtext">What?</string>

    <string name="app_message_on_close">Tap again i dare you. I DOUBLE DARE YOU!</string>

    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_play">Play</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_items">Delete Items</string>
    <string name="action_upload">Upload</string>
    <string name="action_download">Download List</string>
    <string name="action_sort">Sort</string>

    <string name="action_next_round">NEXT ROUND</string>
    <string name="action_go_to_list">GO TO PLAYLIST</string>

    <string name="action_delete_order">40</string>
    <string name="action_delete_items_order">50</string>
    <string name="action_play_order">60</string>
    <string name="action_edit_order">80</string>
    <string name="action_settings_order">100</string>
    <string name="action_download_order">120</string>
    <string name="action_upload_order">140</string>
    <string name="action_sort_order">160</string>
    <string name="action_help_order">180</string>
    <string name="action_about_order">200</string>

    <string name="button_yes_positive">YES! I\'M POSITIVE</string>
    <string name="button_abort">Abort</string>
    <string name="button_submit">Submit</string>
    <string name="button_create">Create</string>
    <string name="button_edit">Edit</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_delete">Delete</string>
    <string name="button_add">Add</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_pass">PASS</string>
    <string name="button_check">CHECK</string>
    <string name="button_game_start">Tap timer to start.</string>
    <string name="button_game_resume">Tap timer to resume.</string>
    <string name="button_upload">Upload</string>
    <string name="button_select_file">Select .what file</string>

    <string name="playlist_message_uploaded">Added %d playlist(s).</string>
    <string name="playlist_message_downloaded">File saved at %s</string>
    <string name="playlist_message_delete_list_item_oops">Oops. Sorry. Try again.</string>
    <string name="playlist_message_deleted_list_item">Item was deleted.</string>
    <string name="playlist_message_delete_list_item">Tap again to delete item.</string>
    <string name="playlist_message_delete">Delete playlist?</string>
    <string name="playlist_message_deleted">Playlist was deleted.</string>
    <string name="playlist_message_item_added">Item successfully added.</string>
    <string name="playlist_label_word_count">Has %d word(s).</string>

    <string name="playlist_edit_name">Edit name</string>
    <string name="playlist_label_name">Name</string>
    <string name="playlist_label_list_item">Text</string>
    <string name="placeholder_list_name">Enter play-list name</string>
    <string name="placeholder_add_list_item">Enter play-list item</string>

    <string name="game_message_no_words">HELLO? Really? No words?</string>
    <string name="game_message_list_not_found">Cannot start game.</string>
    <string name="game_message_ended">Game is already over champ.</string>
    <string name="game_message_paused">Game is paused you imbecile.</string>
    <string name="game_message_end">That\'s all folks!</string>
    <string name="game_message_cannot_pass">You shall not.. PASS!</string>
    <string name="game_message_last_word">This is the last word.</string>
    <string name="game_message_game_not_found">Game was not found.</string>

    <string name="round_subtext_checked">CHECKED</string>
    <string name="round_subtext_passed">PASSED</string>
    <string name="round_subtext_last_word">LAST WORD</string>
    <string name="round_title_end">End of Round #%d</string>
    <string name="round_title_unchecked_words">Unchecked words</string>
    <string name="round_title_checked_words">Checked words</string>
    <string name="round_title_statistics">Statistics</string>

    <string name="settings_text_time_limit">Time Limit</string>
    <string name="settings_subtext_time_limit">Duh. Time limit? Per round?</string>
    <string name="settings_text_number_of_passes">Number of passes</string>
    <string name="settings_subtext_number_of_passes">How many passes would there be?</string>
    <string name="settings_unit_time_limit">seconds</string>
    <string name="settings_unit_passes">passes</string>
    <string name="settings_text_include_passed">Include passed words</string>
    <string name="settings_subtext_include_passed">Include passed words in whole game.</string>
    <string name="settings_include_passed_label_yes">YES</string>
    <string name="settings_include_passed_label_no">NO</string>

    <string name="title_activity_round_end">Round End</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_list_index">List</string>
    <string name="title_activity_game">Game Activity</string>
    <string name="title_activity_list_add">Create new playList</string>
    <string name="title_activity_list">PLAY-lists</string>

    <string name="msg_delete">Delete? You sure?</string>
    <string name="msg_conf">REALLY? Like for real?</string>

    <string name="err_msg_wrong_uploaded_file">Please don\'t test me.</string>
    <string name="err_msg_required">%s is required.</string>
    <string name="err_msg_length">%s must be %d to %d only.</string>
    <string name="err_msg_invalid">%s value is invalid.</string>
    <string name="err_msg_crash">Something went wrong.</string>
    <string name="err_msg_char_length">%s can only be %d-%d characters long.</string>
</resources>
