<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sprobe.training.miniproject.activity.MainActivity">

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        android:tooltipText="@string/action_delete"
        android:orderInCategory="@string/action_delete_order"
        app:showAsAction="never"/>

    <item android:id="@+id/action_delete_items"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_items"
        android:tooltipText="@string/action_delete_items"
        android:orderInCategory="@string/action_delete_items_order"
        app:showAsAction="never"/>

    <item android:id="@+id/action_play"
        android:icon="@drawable/ic_play_arrow"
        android:tooltipText="@string/action_play"
        android:title="@string/action_play"
        android:orderInCategory="@string/action_play_order"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:tooltipText="@string/action_settings"
        android:orderInCategory="@string/action_settings_order"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="@string/action_sort_order"
        android:tooltipText="@string/action_sort"
        android:title="@string/action_sort"
        app:showAsAction="never"/>

    <item android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:orderInCategory="@string/action_download_order"
        android:tooltipText="@string/action_download"
        android:title="@string/action_download"
        app:showAsAction="never"/>

    <item android:id="@+id/action_upload"
        android:icon="@drawable/ic_upload"
        android:orderInCategory="@string/action_upload_order"
        android:tooltipText="@string/action_upload"
        android:title="@string/action_upload"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:orderInCategory="@string/action_about_order"
        android:title="@string/action_about"
        android:tooltipText="@string/action_about"
        app:showAsAction="never"/>
</menu>
