<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/common_action_bar"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_lg">

            <TextView android:id="@+id/settings_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_sm"
                android:layout_marginEnd="@dimen/dp_sm"
                android:layout_marginBottom="@dimen/dp_md"
                style="@style/ErrorMessage"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginBottom="@dimen/dp_md"
            android:weightSum="@dimen/weight_bs_grid">

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/dp_md"
                android:layout_weight="@dimen/weight_two_thirds"
                android:orientation="vertical">

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ItemText"
                    android:text="@string/settings_text_time_limit"/>
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ItemSubtext"
                    android:text="@string/settings_subtext_time_limit"/>
            </LinearLayout>

            <RelativeLayout android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_sm"
                android:layout_weight="@dimen/weight_one_third">

                <EditText android:id="@+id/settings_time_limit"
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/dp_x3lg"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLength="3"
                    android:inputType="number"/>
                <TextView android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/settings_time_limit"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/dp_sm"
                    android:labelFor="@+id/settings_time_limit"
                    android:text="@string/settings_unit_time_limit"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginBottom="@dimen/dp_md"
            android:weightSum="@dimen/weight_bs_grid">

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="@dimen/weight_two_thirds"
                android:layout_marginEnd="@dimen/dp_md"
                android:orientation="vertical">

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ItemText"
                    android:text="@string/settings_text_number_of_passes"/>
                <TextView android:layout_width="match_parent"
                    style="@style/ItemSubtext"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_subtext_number_of_passes"/>
            </LinearLayout>

            <RelativeLayout android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_sm"
                android:layout_weight="@dimen/weight_one_third">

                <EditText android:id="@+id/settings_num_pass"
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/dp_x3lg"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:maxLength="2"
                    android:inputType="number"/>

                <TextView android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/settings_num_pass"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/dp_sm"
                    android:labelFor="@+id/settings_num_pass"
                    android:text="@string/settings_unit_passes"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_md"
            android:baselineAligned="false"
            android:weightSum="@dimen/weight_bs_grid">

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="@dimen/weight_two_thirds"
                android:layout_marginEnd="@dimen/dp_md"
                android:orientation="vertical">

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ItemText"
                    android:text="@string/settings_text_include_passed"/>
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ItemSubtext"
                    android:text="@string/settings_subtext_include_passed"/>
            </LinearLayout>

            <RelativeLayout android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="@dimen/weight_one_third"
                android:layout_marginEnd="@dimen/dp_sm">

                <ToggleButton android:id="@+id/settings_include_passed_words"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toggle_default"
                    android:textOn="@string/settings_include_passed_label_yes"
                    android:textOff="@string/settings_include_passed_label_no"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/dp_sm"
            android:paddingEnd="@dimen/dp_sm">

            <Button android:id="@+id/settings_save"
                style="@style/ButtonDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
